Implemented prepend() method and tested it using html

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   <title>TypeScript Lab</title>
 </head>
 <body>
-  <!-- your code here -->
+  <script src = "/dist/index.js" defer></script> // loading a script
+  <input type="string" id="stringValue" placeholder="String Value" />
+  <input type="number" id="spaceSize" placeholder="Number of spaces" />
+  <button>prepend!</button>
 </body>
 </html>
+
